--- a/src/main/resources/static/document.css
+++ b/src/main/resources/static/document.css
@@ -50,6 +50,9 @@ body {
     width: auto;
 }
 
+.valid-input {
+		border: 2px solid green;
+}
 
 .demo-badge {
     background: rgba(255, 255, 255, 0.2);
