Adding Send functionality save not email yet

--- a/src/main/resources/static/document.css
+++ b/src/main/resources/static/document.css
@@ -2115,3 +2115,6 @@ table.dataTable tbody td {
 .version-table tr:hover {
     background-color: #f9f9f9;
 }
+.ui-autocomplete {
+    z-index: 10000 !important; /* or higher than your modal's z-index */
+}
