--- a/src/main/resources/static/document.css
+++ b/src/main/resources/static/document.css
@@ -2118,3 +2118,28 @@ table.dataTable tbody td {
 .ui-autocomplete {
     z-index: 10000 !important; /* or higher than your modal's z-index */
 }
+.tagify__dropdown {
+  z-index: 9999 !important;
+  position: absolute !important;
+}
+/*Auto complete*/
+.select2-container--default .select2-selection--multiple {
+    min-height: 38px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+    padding: 5px;
+    overflow-y: auto;
+  }
+
+  .select2-container--default .select2-selection--multiple .select2-selection__choice {
+    background-color: #007bff;
+    color: #fff;
+    border: none;
+    padding: 2px 6px;
+    margin-top: 5px;
+  }
+
+  .select2-dropdown {
+    z-index: 9999 !important;
+  }
