--- a/src/main/resources/static/correspondance.css
+++ b/src/main/resources/static/correspondance.css
@@ -717,7 +717,8 @@ table.dataTable tbody td {
     border-bottom: 1px solid #f0f0f0;
     display: flex;
     align-items: center;
-    color: #333;
+    color: black;
+    background-color: white;
 }
 
 .filter-option:hover {
